k8s-resources/web-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api
  namespace: web-app-ns
spec:
  selector:
    app: web-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
